--- a/pom.xml
+++ b/pom.xml
@@ -17,13 +17,13 @@
 
 	<properties>
 		<enforcer.skip>true</enforcer.skip>
-		
+
 		<!-- TODO remove when pom-scijava-base is updated -->
 		<scijava.jvm.version>8</scijava.jvm.version>
 		<scijava.release.version>8</scijava.release.version>
 		<scijava.jvm.build.version>[1.8.0-101,)</scijava.jvm.build.version>
 		<maven-enforcer-plugin.version>3.0.0-M3</maven-enforcer-plugin.version>
-		
+
 		<n5.version>2.3.0</n5.version>
 		<n5-imglib2.version>3.5.1</n5-imglib2.version>
 		<n5-hdf5.version>1.2.0</n5-hdf5.version>
@@ -33,14 +33,14 @@
 		<n5-jpeg.version>0.0.1-beta1</n5-jpeg.version>
 		<n5-google-cloud.version>3.3.1</n5-google-cloud.version>
 	</properties>
-	
+
 	<repositories>
 		<repository>
 			<id>scijava.public</id>
 			<url>https://maven.scijava.org/content/groups/public</url>
 		</repository>
 	</repositories>
-	
+
 	<dependencies>
 		<dependency>
 			<groupId>sc.fiji</groupId>
@@ -109,8 +109,19 @@
 			<groupId>mpicbg</groupId>
 			<artifactId>mpicbg_</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>org.apache.spark</groupId>
+			<artifactId>spark-core_2.12</artifactId>
+			<version>3.0.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.10.5</version>
+		</dependency>
 	</dependencies>
-	
+
 	<profiles>
 		<profile>
 			<id>java-9</id>
