--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,11 @@
 			<artifactId>jackson-databind</artifactId>
 			<version>2.10.5</version>
 		</dependency>
+		<dependency>
+			<groupId>net.haesleinhuepf</groupId>
+			<artifactId>clij2_</artifactId>
+			<version>2.2.0.11</version>
+		</dependency>
 	</dependencies>
 
 	<profiles>
