--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,11 @@
 			<artifactId>clij2_</artifactId>
 			<version>2.2.0.11</version>
 		</dependency>
+		<dependency>
+			<groupId>org.janelia.saalfeldlab</groupId>
+			<artifactId>n5-spark</artifactId>
+			<version>3.7.2</version>
+		</dependency>
 	</dependencies>
 
 	<profiles>
