--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	</parent>
 
 	<groupId>org.janelia.saalfeldlab</groupId>
-	<artifactId>i2k-2020-advanced</artifactId>
+	<artifactId>neubias-bigdata</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
 	<properties>
@@ -110,6 +110,7 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
+			<version>2.10.5</version>
 		</dependency>
 		<dependency>
 			<groupId>net.haesleinhuepf</groupId>
