--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
 
 		<ejml.version>0.43.1</ejml.version>
 
+		<jackson-databind.version>2.15.3</jackson-databind.version>
 	</properties>
 
 	<repositories>
@@ -84,12 +85,8 @@
 
 		<dependency>
 			<groupId>org.apache.spark</groupId>
-			<artifactId>spark-core_2.12</artifactId>
-			<version>3.0.1</version>
-		</dependency>
-		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-databind</artifactId>
+			<artifactId>spark-core_2.13</artifactId>
+			<version>3.5.0</version>
 		</dependency>
 		<dependency>
 			<groupId>net.haesleinhuepf</groupId>
